--- a/splash_screen.html
+++ b/splash_screen.html
@@ -7,7 +7,7 @@
     <title>Splash Screen</title>
     <link rel="stylesheet" href="assets/css/splash-screen.css">
 </head>
-<body>
+<body>a
     <header>
         <div class="container-button">
             <div class="button"></div>
